--- a/example/index.html
+++ b/example/index.html
@@ -66,7 +66,7 @@ function noWebcam( msg ){
 // this setInterval is a safe measure, so we don't call flash function before it is loaded;
 var registerQRCb = setInterval(function(){
 	//var nomeDoFlash = "QR"
-	if( QR ){
+	if( QR.start ){
 		clearInterval(registerQRCb)
 		// first param is the function signature we want the SWF to call periodicaly
 		// second param is the intervall we want it, in miliseconds (default: half-second)
