--- a/plugin/index.html
+++ b/plugin/index.html
@@ -4,17 +4,20 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 </head>
 <body>
+  <h1>QR Code Reader</h1>
   <div id="altContent">
     <h1>QR</h1>
     <p><a href="http://www.adobe.com/go/getflashplayer">Get Adobe Flash player</a></p>
   </div>
-  <script src="qr.js"></script>
+  <h2 id="result"></h2>
+  <script src="qr.min.js"></script>
   <script>
     setupQrReader({
-      width: 640,
-      height: 480,
+      width: 320,
+      height: 240,
       success: function(code){
         console.log(code);
+        document.getElementById("result").innerText = code;
       },
       noWebcam: function(){
         console.log("no webcam");
