--- a/plugin/index.html
+++ b/plugin/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 </head>
 <body>
   <div id="altContent">
