--- a/plugin/index.html
+++ b/plugin/index.html
@@ -10,7 +10,7 @@
     <p><a href="http://www.adobe.com/go/getflashplayer">Get Adobe Flash player</a></p>
   </div>
   <h2 id="result"></h2>
-  <script src="qr.min.js"></script>
+  <script src="qr.js"></script>
   <script>
     setupQrReader({
       width: 320,
